# cricket-ai-expert

./: .env.example  .gitignore  LICENSE  README.md  plan.md  pyproject.toml
app/: __init__.py  domain.py
app/analytics/: __init__.py  players.py  stats.py
app/api/: __init__.py  main.py
app/chat/: __init__.py  disambiguation.py  memory.py
app/ingest/: __init__.py  __main__.py  documents.py  parser.py  pipeline.py  registry.py
app/knowledge/: __init__.py  data.py  service.py
app/rag/: __init__.py  chunking.py  index.py  intent.py  llm.py  service.py
app/settings/: __init__.py  config.py
app/ui/: streamlit_app.py
cricket_ai_expert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: benchmark_questions.json  benchmark_results.json  run_benchmark.py  test_analytics.py  test_knowledge.py  test_llm.py  test_memory.py  test_parser.py  test_players.py
