[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricket-ai-expert"
version = "0.1.0"
description = "Local-first cricket expert chatbot over CricSheet data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Manoj Prabhakar" }
]
dependencies = [
  "chromadb>=0.5.5",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sentence-transformers>=3.0.0",
  "streamlit>=1.44.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

